<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2a2a2a"
    tools:context=".ui.results.Results">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/res_label"
        android:textColor="#8a8a8a"
        android:textFontWeight="700"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="144dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="32dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <TextView
            android:id="@+id/resName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/res_name"
            android:textColor="#8a8a8a" />

        <TextView
            android:id="@+id/resEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/res_email"
            android:textColor="#8a8a8a" />

        <TextView
            android:id="@+id/resPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/res_password"
            android:textColor="#8a8a8a" />

        <TextView
            android:id="@+id/resGender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/res_gender"
            android:textColor="#8a8a8a" />

        <TextView
            android:id="@+id/resDegree"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/res_program"
            android:textColor="#8a8a8a" />

        <TextView
            android:id="@+id/resYear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/res_year"
            android:textColor="#8a8a8a" />

        <TextView
            android:id="@+id/resBirthday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/res_birthday"
            android:textColor="#8a8a8a" />

        <TextView
            android:id="@+id/resHobbies"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/res_hobbies"
            android:textColor="#8a8a8a" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="203dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/linearLayout3"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <TextView
            android:id="@+id/valName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:textColor="#8a8a8a" />

        <TextView
            android:id="@+id/valEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:textColor="#8a8a8a" />

        <TextView
            android:id="@+id/valPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:textColor="#8a8a8a" />

        <TextView
            android:id="@+id/valGender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:textColor="#8a8a8a" />

        <TextView
            android:id="@+id/valDegree"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:textColor="#8a8a8a" />

        <TextView
            android:id="@+id/valYear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:textColor="#8a8a8a" />

        <TextView
            android:id="@+id/valBirthday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:textColor="#8a8a8a" />

        <TextView
            android:id="@+id/valHobbies"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:textColor="#8a8a8a" />
    </LinearLayout>

    <Button
        android:id="@+id/signIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="236dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/action_sign_in"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4" />
</android.support.constraint.ConstraintLayout>